@@ -6,7 +6,8 @@
 ## Version 0.3.7
 - ADD: Traverse can now also take custom function as a traversal argument
 - ADD: Navigate method
-- ADD: Convert SplittingNode from party package to data.tree (#6)
+- ADD: as.Node.BinaryTree Convert SplittingNode from party package to data.tree (#6)
+- ADD: as.Node.party Convert party class from partykit package to data.tree (#6)
 
 ## Version 0.3.6
 - FIX: GetDefaultTooltip now also works for attributes which are functions
